@@ -85,6 +85,7 @@ export(taxa2cladogram)
 export(taxa2phylo)
 export(taxicDivCont)
 export(taxicDivDisc)
+export(testEdgeMat)
 export(timeLadderTree)
 export(timePaleoPhy)
 export(timeSliceTree)
