@@ -3,6 +3,7 @@ Version - 2.4 -
 -Modified bin_timePaleoPhy and bin_cal3TimePaleoPhy to clarify that dateTreatment=minMax should be replaced be *either* the point.occur argument *or* a sites matrix
 -Changed license from GPL ver 2 or higher to Creative Common zero, as I finally realized that CC0 is supported by CRAN (apparently I missed this change years ago)
 -Added 'clade' option to collapseNodes to collapse *all* descendant edges of a selected node
+-Added function testEdgeMat which is a simple checker of the $edge matrix of phylo objects for inconsistencies
 
 Version - 2.3 - 01-16-15
 -New function dropPaleoTip which is a simple wrapper for drop.tip in ape but uses fixRootTime to adjust the $root.time element in the resulting tree, after tips are dropped (Thanks to a conversation with Graeme Lloyd)
